<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_map"
        android:title="@string/map"
        android:icon="@drawable/baseline_map_24"
        app:showAsAction="ifRoom"
        />
    <item
        android:title="@string/setting"
        android:icon="@drawable/baseline_settings_24"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/setting_language"
                android:title="@string/language"
                app:showAsAction="withText"
                />
        </menu>
    </item>
    <item android:id="@+id/action_logout"
        android:title="@string/logout"
        android:icon="@drawable/baseline_logout_24"
        app:showAsAction="ifRoom"
        />
</menu>